[package]
name = "lets-roll"
version = "0.1.0"
authors = ["jjorissen52 <jjorissen52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.0"
lazy_static = "1.4.0"
regex = "1.3.4"
rand = "0.7.3"
cute = "0.3.0"
